changes to add regions page

--- a/index.html
+++ b/index.html
@@ -32,12 +32,31 @@ title: "Home"
     	clear: both;
     	line-height: 1;
 	}
+	.phase-tag {
+    
+    vertical-align: top;
+    
+    padding: 2px 5px 0;
+    font-family: "nta", Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.1428571429;
+    font-weight: 700;
+    text-transform: none;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-decoration: none;
+    color: #fff;
+    background-color: #d53880;
+}
 </style>
 
 <div class="masthead masthead-xl masthead-homepage">
   <header class="layout-semibreve masthead-header">
     <h1 id="story-title" class="page-title"><a href="#">Ten year Network Development Plan 2016</a></h1>
-    <p id="story-content"></p>
+    <p id="story-content" class="phase-tag">AUTO PLAY VIDEO IN BG</p>
+    <video autoplay="" loop="" preload="auto">
+    	<source id="mp4" src="/animation test-SD.mp4" type="video/mp4">
+    </video>
     <a id="box-link" class="button hollow" style="color:#fff;font-weight: bold;" data-tooltip aria-haspopup="true" class="has-tip top" data-disable-hover="false" tabindex="2" title="This will open the full video to play" data-click-open="true">Learn about TYNDP</a>
   </header>
 </div>
