--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ title: "Home"
 			</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus voluptates facere molestias, consectetur optio nemo. Aperiam atque, nisi illo perferendis nobis quam modi necessitatibus, nihil. Quidem, nam, numquam. Fuga, dignissimos.</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, accusamus saepe facere impedit sed quaerat iste, blanditiis pariatur, voluptate fugit esse cumque! Perspiciatis sapiente debitis, architecto nesciunt. Voluptates, dignissimos cumque.</p>
-			<a href="/exec-report" class="button hollow">Executive Report &rarr;</a>
+			<a href="{{"/exec-report" | prepend: site.baseurl }}" class="button hollow">Executive Report &rarr;</a>
 		</div>
 	</div>
 </section>
@@ -148,7 +148,7 @@ title: "Home"
 		<div class="badge-heading text-center">
 			<h2 >The Results</h2>
 			<p>Explore our complete reference map. Find out everything you need to know about each project, its status, how was it's CBA.</p>
-			<p><a href="/reference" class="button"><strong>TO MAP &rarr;</strong></a></p>
+			<p><a href="{{"/reference" | prepend: site.baseurl }}" class="button"><strong>TO MAP &rarr;</strong></a></p>
 			<hr>
 		</div>
 		<div class="image">
@@ -161,7 +161,7 @@ title: "Home"
 		<div class="badge-heading text-center">
 			<h2 >The Future</h2>
 			<p>The world keeps on turning and so does TYNDP. There's no time like the present to get started on the next edition TYNDP 2018.</p>
-			<p><a href="/future" class="button"><strong>Share your views</strong></a></p>
+			<p><a href="{{"/future" | prepend: site.baseurl }}" class="button"><strong>Share your views</strong></a></p>
 			<hr>
 		</div>
 		<div class="image">
